bppackaging/src/objects/CO_Header__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>TEXT(
 FLOOR(now() - CreatedDate)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((now() - CreatedDate)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((now() - CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
        <label>Created Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CO Headers</relationshipLabel>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Markup_From_Prive_Level__c</fullName>
        <label>Discount-Markup From Prive Level</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labour_Rate_From_Price_Level__c</fullName>
        <label>Labour Rate From Price Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_status__c</fullName>
        <label>Order status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Visited__c</fullName>
        <label>Owner Last Visited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Price_Base_From_Price_Level__c</fullName>
        <label>Part Price Base From Price Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Order_status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Due__c</fullName>
        <formula>Total_Order_Value__c - Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_COLI_Tax_Amount__c</fullName>
        <label>Total COLI Tax Amount</label>
        <summarizedField>CO_Line_Item__c.Tax_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_COLI__c</fullName>
        <label>Total COLI</label>
        <summarizedField>CO_Line_Item__c.Sub_Total_With_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Deposit__c</fullName>
        <label>Total Deposit</label>
        <summarizedField>CO_Deposit__c.Amount__c</summarizedField>
        <summaryForeignKey>CO_Deposit__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Tax__c</fullName>
        <label>Total Order Tax</label>
        <summarizedField>CO_Line_Item__c.Tax_Amount__c</summarizedField>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Value__c</fullName>
        <description>Sum of all merchandise of CO header</description>
        <label>Total Order Value</label>
        <summarizedField>CO_Line_Item__c.Sub_Total_With_Tax__c</summarizedField>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>CO_Invoice_Header__c.Total_Payment__c</summarizedField>
        <summaryForeignKey>CO_Invoice_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SO_Tax_Amount__c</fullName>
        <label>Total SO Tax Amount</label>
        <summarizedField>Service_Order_Header__c.Tax_Amount__c</summarizedField>
        <summaryForeignKey>Service_Order_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SO__c</fullName>
        <label>Total SO</label>
        <summarizedField>Service_Order_Header__c.Total__c</summarizedField>
        <summaryForeignKey>Service_Order_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>CO Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Order_status__c</columns>
        <columns>Total_Balance_Due__c</columns>
        <columns>Total_Order_Value__c</columns>
        <columns>Total_Order_Tax__c</columns>
        <columns>Total_Payment__c</columns>
        <columns>Total_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>